--- a/topaz-scoring/package.json
+++ b/topaz-scoring/package.json
@@ -10,11 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.89.0",
     "@tailwindcss/postcss": "^4.1.18",
     "@tailwindcss/vite": "^4.1.18",
+    "browser-image-compression": "^2.0.2",
+    "date-fns": "^4.1.0",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.11.0"
+    "react-lazy-load-image-component": "^1.6.3",
+    "react-router-dom": "^7.11.0",
+    "react-toastify": "^11.0.5",
+    "react-window": "^2.2.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
