--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,32 @@
   "buildCommand": "cd topaz-scoring && npm install && npm run build",
   "outputDirectory": "topaz-scoring/dist",
   "framework": "vite",
-  "installCommand": "cd topaz-scoring && npm install"
+  "installCommand": "cd topaz-scoring && npm install",
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=0, must-revalidate"
+        }
+      ]
+    },
+    {
+      "source": "/assets/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    }
+  ]
 }
 
