fix: Add lucide-react dependency for delete button icons
- Fixes Vercel build error caused by missing lucide-react import
- Required for Trash2 and Loader icons in WelcomePage.jsx

--- a/topaz-scoring/package.json
+++ b/topaz-scoring/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^4.1.0",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
+    "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-lazy-load-image-component": "^1.6.3",
