fix(vercel): Add cache-busting configuration to force fresh deployment
- Updated vercel.json with npm ci and dist cleanup
- Added no-cache headers for index.html
- Configured Vite build with hash-based file names
- Added .vercelignore to exclude unnecessary files
- Forces Vercel to serve fresh build on each deployment

This should resolve the issue where Vercel was serving cached old code.

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
-  "buildCommand": "cd topaz-scoring && npm install && npm run build",
+  "buildCommand": "cd topaz-scoring && rm -rf dist && npm ci && npm run build",
   "outputDirectory": "topaz-scoring/dist",
   "framework": "vite",
-  "installCommand": "cd topaz-scoring && npm install",
+  "installCommand": "cd topaz-scoring && npm ci",
   "rewrites": [
     {
       "source": "/(.*)",
@@ -10,6 +10,15 @@
     }
   ],
   "headers": [
+    {
+      "source": "/index.html",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-cache, no-store, must-revalidate"
+        }
+      ]
+    },
     {
       "source": "/(.*)",
       "headers": [
